Fix loading screen edge gap

--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,5 @@
 html {
-  background-image: url('./background.jpg');
+  background-image: url("./background.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
@@ -9,6 +9,8 @@ body {
   display: flex;
   flex-direction: column;
   gap: 20px;
+  padding: 0;
+  margin: 0;
 }
 
 .loadingScreen {
